Fix footer on mobile screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,7 +57,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-header, main {
+header, main, footer {
 	max-width: 1080px;
 	width: 100vw;
 	padding-left: 1rem;
